<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ticket_update_delete_admin">

    <TextView
        android:id="@+id/tickets_update_delete_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/tickets_update_delete_headline"
        android:textColor="@color/topics"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="262dp"
        android:layout_marginRight="262dp"
        android:layout_marginBottom="511dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickets_update_delete_headline"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/tickets" />

    <TextView
        android:id="@+id/ticket_type_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:layout_marginBottom="31dp"
        android:text="@string/ticket_type_1"
        app:layout_constraintBottom_toTopOf="@+id/ticket_price_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tickets_update_delete_headline" />

    <TextView
        android:id="@+id/ticket_price_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/ticket_price_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/ticket_type_1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="134dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="261dp"
        android:layout_marginRight="261dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/tickets" />

    <TextView
        android:id="@+id/ticket_type_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/ticket_type_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_1" />

    <TextView
        android:id="@+id/ticket_price_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/ticket_price_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/ticket_type_2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="134dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/tickets" />

    <TextView
        android:id="@+id/ticket_type_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:text="@string/ticket_type_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_2" />

    <TextView
        android:id="@+id/ticket_price_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/ticket_price_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/ticket_type_3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tickets" />

    <TextView
        android:id="@+id/ticket_type_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="@string/ticket_type_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_3" />

    <TextView
        android:id="@+id/ticket_price_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/ticket_price_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/ticket_type_4" />

    <Button
        android:id="@+id/button_update_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_update_1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_1" />

    <Button
        android:id="@+id/button_delete_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_delete_1"
        app:backgroundTint="@color/delete_button"
        app:layout_constraintStart_toEndOf="@+id/button_update_1"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_1" />

    <Button
        android:id="@+id/button_update_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="19dp"
        android:text="@string/button_update_2"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_2" />

    <Button
        android:id="@+id/button_update_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="18dp"
        android:text="@string/button_update_3"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_3" />

    <Button
        android:id="@+id/button_update_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="11dp"
        android:text="@string/button_update_1"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_4" />

    <Button
        android:id="@+id/button_delete_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/button_delete_2"
        app:backgroundTint="@color/delete_button"
        app:layout_constraintStart_toEndOf="@+id/button_update_2"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_2" />

    <Button
        android:id="@+id/button_delete_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="19dp"
        android:text="@string/button_delete_3"
        app:backgroundTint="@color/delete_button"
        app:layout_constraintStart_toEndOf="@+id/button_update_3"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_3" />

    <Button
        android:id="@+id/button_delete_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="13dp"
        android:text="@string/button_delete_4"
        app:backgroundTint="@color/delete_button"
        app:layout_constraintStart_toEndOf="@+id/button_update_4"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_4" />

    <Button
        android:id="@+id/insert_new"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:layout_marginBottom="6dp"
        android:text="@string/insert_new"
        app:backgroundTint="@color/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>