<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@drawable/abstract_design_background_blue_wave_vector_graphic_569530"
    tools:context=".EditUserProfilePage">


<TextView

android:id="@+id/editprofile"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="0dp"
android:text="EDIT USER DETAILS"
android:textColor="@color/topicColor"
android:textSize="30dp"
android:textStyle="bold" />

<EditText

android:id="@+id/ename"
android:layout_width="match_parent"
android:layout_height="50dp"
android:layout_marginBottom="10dp"
android:background="@drawable/edittextbackground"
android:backgroundTint="@color/cardview_shadow_start_color"
android:hint="Name"
android:paddingLeft="28dp"
android:textColorHint="@color/black"
android:textSize="25dp" />

<EditText

android:id="@+id/eemail"
android:layout_width="match_parent"
android:layout_height="50dp"
android:layout_marginBottom="10dp"
android:background="@drawable/edittextbackground"
android:backgroundTint="@color/cardview_shadow_start_color"
android:hint="@string/Email"
android:inputType="textEmailAddress"
android:paddingLeft="28dp"
android:textColorHint="@color/black"
android:textSize="25dp" />

<EditText

android:id="@+id/ebirthday"
android:layout_width="match_parent"
android:layout_height="50dp"
android:layout_marginBottom="10dp"
android:background="@drawable/edittextbackground"
android:backgroundTint="@color/cardview_shadow_start_color"
android:hint="@string/birthday"
android:inputType="date"
android:paddingLeft="28dp"
android:textColorHint="@color/black"
android:textSize="25dp" />

<EditText

android:id="@+id/ephone"
android:layout_width="match_parent"
android:layout_height="50dp"
android:layout_marginBottom="10dp"
android:background="@drawable/edittextbackground"
android:backgroundTint="@color/cardview_shadow_start_color"
android:hint="@string/phone_Number"
android:inputType="phone"
android:paddingLeft="28dp"
android:textColorHint="@color/black"
android:textSize="25dp" />

<EditText

android:id="@+id/ePassword"
android:layout_width="match_parent"
android:layout_height="50dp"
android:layout_marginBottom="10dp"
android:background="@drawable/edittextbackground"
android:backgroundTint="@color/cardview_shadow_start_color"
android:hint="@string/Password"
android:inputType="textPassword"
android:paddingLeft="28dp"
android:textColorHint="@color/black"
android:textSize="25dp" />


<Button

android:id="@+id/eupdate"
android:layout_width="match_parent"
android:layout_height="60dp"
    android:layout_marginBottom="10dp"
android:backgroundTint="@color/topicColor"
android:text="Update"
android:textSize="25dp"
android:textStyle="bold"
android:paddingLeft="28dp"
app:backgroundTint="#3385ff" />

<Button

android:id="@+id/ecancle"
android:layout_width="match_parent"
android:layout_height="60dp"

android:paddingLeft="28dp"
android:backgroundTint="@color/deleteBtn"
android:text="@string/Cancel"
android:textSize="25dp"
android:textStyle="bold"
app:backgroundTint="#3385ff" />


</LinearLayout>