<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_tickets_admin">

    <TextView
        android:id="@+id/topic_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:text="@string/topic_1"
        android:textColor="@color/topics"
        android:textColorLink="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/insert_ticket_type"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/ticket_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insert_type"
        app:layout_constraintTop_toBottomOf="@+id/topic_1" />

    <TextView
        android:id="@+id/ticket_price_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/ticket_price_insert"
        app:layout_constraintBaseline_toBaselineOf="@+id/Insert_ticket_price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cinemahall_name_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/cinemahall_insert"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_cinema_hall"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/num_of_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_cinema_hall"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/insert_cinema_hall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/insert_cinema_hall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cinemahall_name_insert"
        app:layout_constraintTop_toBottomOf="@+id/Insert_ticket_price" />

    <Button
        android:id="@+id/insert_button"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:text="@string/insert_button"
        app:backgroundTint="@color/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Insert_ticket_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ticket_price_insert"
        app:layout_constraintTop_toBottomOf="@+id/insert_ticket_type"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/insert_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/insert_type"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_ticket_type"
        app:layout_constraintEnd_toStartOf="@+id/insert_ticket_type"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/insert_num_of_tickets"
        android:layout_width="117dp"
        android:layout_height="25dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/insert_num_of_tickets"
        app:layout_constraintBaseline_toBaselineOf="@+id/num_of_tickets"
        app:layout_constraintEnd_toStartOf="@+id/num_of_tickets"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/movie_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/movie_name_insert"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/movie_name_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/movie_name_insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_name"
        app:layout_constraintTop_toBottomOf="@+id/num_of_tickets" />

    <TextView
        android:id="@+id/movie_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:text="@string/movie_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/movie_time_insert"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/movie_time_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/movie_time"
        app:layout_constraintTop_toBottomOf="@+id/movie_name_insert" />


</androidx.constraintlayout.widget.ConstraintLayout>